Edited prob distributions

--- a/_sass/minima/fastpages-styles.scss
+++ b/_sass/minima/fastpages-styles.scss
@@ -96,11 +96,13 @@ h1 {
 }
 
 h2 {
-    margin-top:2rem !important;      
+    margin-top:2rem !important;
+    font-size: 21px;      
 }
 
 h3, h4 {
-    margin-top:1.5rem !important;      
+    margin-top:1.5rem !important; 
+    font-size: 18px;  
 }
 
 p {
