--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,9 +361,9 @@ table td { border: 1px solid #e8e8e8; }
 
 h1 { margin-top: 2.5rem !important; }
 
-h2 { margin-top: 2rem !important; }
+h2 { margin-top: 2rem !important; font-size: 21px; }
 
-h3, h4 { margin-top: 1.5rem !important; }
+h3, h4 { margin-top: 1.5rem !important; font-size: 18px; }
 
 p { margin-top: 1rem !important; margin-bottom: 1rem !important; }
 
